Projede yapılan bütün eklemeler, değişiklikler burada.

11 Aralık 2022 -> Proje React with TypeScript ile oluşturuldu. Web sitesinin tasarım kodları componentlere bölündü. Tagcanvas kütüphanesinin React'ta çalışabilmesi için kütüphanedeki kodlarda ufak düzenlemeler yapıldı ve projeye entegre edildi.

12 Aralık 2022 -> İş arayan kullanıcının profil sayfası eklendi.

19 Aralık 2022 -> Login, Signup sayfaları eklendi. React-router-dom kütüphanesi kullanılarak gerekli routing işlemleri yapıldı.

20 Aralık 2022 -> Login ve Signup sayfalarına Client-side validation eklendi. Kullanılan kütüphaneler Formik, Yup

29 Aralık 2022 -> 404 Not Found sayfası eklendi.

15 Mart 2023
Front-End sunucu ile Back-end sunucunun bağlantısı kuruldu.
Gerekli contractlar, back-end ile bağlantıyı sağlayan service interfaceleri kodlandı.
İş arayan kullanıcının profil sayfası eklendi. Profil sayfasında kendi cvsini görüntüleyebiliyor.
Company kısmı için hazır tema kuruldu gerekli değişiklikleri yapıldı.
İş İlanlarını listeletme, aktif ve pasiflik durumuna göre listeletme işlemleri yapıldı.
İş ilanı ekleme sayfası yapıldı.
İş ilanı ekleme işlemi başarılıysa Back-End'den gelen mesaj react-toastify kütüphanesi ile kullanıcı bilgilendiriliyor.
İş ilanı eklemek için gerekli validationlar formik ve yup kullanılarak kodlandı.

16 Mart 2023
.env dosyası projeye eklendi. Api'ya bağlanmak için gerekli endpoint bu dosyadan çekiliyor.

27 Mart 2023
JWT Front-End'e entegre edildi. Back-end ile etkileşimli bir şekilde.
Local Storage service yazıldı.
Jwt Decode service yazıldı.
Kullanıcı login işlemi yapıldı.